finish category and add provider controllers
